Update Todo Page

--- a/views/update-todo.ejs
+++ b/views/update-todo.ejs
@@ -9,11 +9,11 @@
 
 <body>
     <div class="table-container">
-        <h1 class="todo-title">Add Todo</h1>
+        <h1 class="todo-title">Update Todo</h1>
         <div>
             <a href="#" class="btn">Back</a>
             <form action="" method="POST">
-                <div class="new-todo">
+                <div class="update-todo">
                     <div class="form-group">
                         <label for="title" class="text-light">Title</label>
                         <input type="text" name="title" id="title" placeholder="Type your todo here..." required>
