All Link Clickable

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <div class="table-container">
         <h1 class="todo-title">Todo List</h1>
         <div>
-            <a href="" class="btn">Add todo</a>
+            <a href="/add-todo" class="btn">Add todo</a>
             <br>
         </div>
         <table>
@@ -29,8 +29,8 @@
                 <td>Test Created at</td>
                 <td>Test Updated at</td>
                 <td>
-                    <a href="" class="btn">Edit</a>
-                    <a href="" class="btn">Delete</a>
+                    <a href="/update-todo" class="btn">Edit</a>
+                    <a href="/delete-todo" class="btn">Delete</a>
                 </td>
             </tr>
         </table>
