--- a/views/update-todo.ejs
+++ b/views/update-todo.ejs
@@ -12,7 +12,7 @@
     <div class="table-container">
         <h1 class="todo-title">Update Todo</h1>
         <div>
-            <a href="#" class="btn">Back</a>
+            <a href="/" class="btn">Back</a>
             <form action="" method="POST">
                 <div class="update-todo">
                     <div class="form-group">
