--- a/views/delete-todo.ejs
+++ b/views/delete-todo.ejs
@@ -11,7 +11,7 @@
 <body>
     <div class="table-container">
         <h1 class="todo-title">Delete Todo</h1>
-        <a href="#" class="btn">Back</a>
+        <a href="/" class="btn">Back</a>
         <div class="confirm">
             <p>Are you sure you want delete this todo </p>
             <a href="#" class="btn">Yes</a>
