--- a/views/delete-todo.ejs
+++ b/views/delete-todo.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo App</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
+<%- include('partials/header.ejs') %>
     <div class="table-container">
         <h1 class="todo-title">Delete Todo</h1>
         <a href="/" class="btn">Back</a>
@@ -18,6 +8,4 @@
             <a href="#" class="btn">No</a>
         </div>
     </div>
-</body>
-
-</html>
+    <%- include('partials/footer.ejs') %>
