--- a/views/update-todo.ejs
+++ b/views/update-todo.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo App</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
+<%- include('partials/header.ejs') %>
     <div class="table-container">
         <h1 class="todo-title">Update Todo</h1>
         <div>
@@ -31,6 +21,4 @@
             </form>
         </div>
     </div>
-</body>
-
-</html>
+    <%- include('partials/footer.ejs') %>
