--- a/views/new-todo.ejs
+++ b/views/new-todo.ejs
@@ -3,7 +3,7 @@
         <h1 class="todo-title">Add Todo</h1>
         <div>
             <a href="/" class="btn">Back</a>
-            <form action="" method="POST">
+            <form action="/add-todo" method="POST">
                 <div class="new-todo">
                     <div class="form-group">
                         <label for="title" class="text-light">Title</label>
@@ -11,7 +11,7 @@
                     </div>
                     <div class="form-group">
                         <label for="description" class="text-light">Description</label>
-                        <input type="text" name="description" id="description"
+                        <input type="text" name="desc" id="description"
                             placeholder="Type description todo here..." required>
                     </div>
                     <div class="form-group">
