--- a/views/update-todo.ejs
+++ b/views/update-todo.ejs
@@ -3,16 +3,16 @@
         <h1 class="todo-title">Update Todo</h1>
         <div>
             <a href="/" class="btn">Back</a>
-            <form action="" method="POST">
+            <form action="/update-todo/<%=todo._id%>" method="POST">
                 <div class="update-todo">
                     <div class="form-group">
                         <label for="title" class="text-light">Title</label>
-                        <input type="text" name="title" id="title" placeholder="Type your todo here..." required>
+                        <input type="text" name="title" id="title" value="<%= todo.title %>" required />
                     </div>
                     <div class="form-group">
                         <label for="description" class="text-light">Description</label>
-                        <input type="text" name="description" id="description"
-                            placeholder="Type description todo here..." required>
+                        <input type="text" name="desc" id="description" value="<%= todo.desc %>"
+                            required />
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn">Add Task</button>
