--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
                     </td>
                     <td>
                         <a href="/update-todo?id=<%=todos[i]._id%>" class="btn">Edit</a>
-                        <a href="/delete-todo" class="btn">Delete</a>
+                        <a href="/delete-todo?id=<%=todos[i]._id%>" class="btn">Delete</a>
                     </td>
                 </tr>
                 <% } %>
