--- a/views/update-todo.ejs
+++ b/views/update-todo.ejs
@@ -11,11 +11,10 @@
                     </div>
                     <div class="form-group">
                         <label for="description" class="text-light">Description</label>
-                        <input type="text" name="desc" id="description" value="<%= todo.desc %>"
-                            required />
+                        <input type="text" name="desc" id="description" value="<%= todo.desc %>" required />
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn">Add Task</button>
+                        <button type="submit" class="btn">Update Task</button>
                     </div>
                 </div>
             </form>
